# german-traffic-sign-recognition

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  app.py  docker-compose.yml  dockerhub-compose.yml  inference.py  notebook.ipynb  pyproject.toml  streamlit_app.py  train.py
